--- a/style.css
+++ b/style.css
@@ -982,3 +982,127 @@ html {
     height: 18rem;
   }
 }
+/*----------contact form --------8*/
+.container{
+  background-color: black;
+  width: 100vw;
+  height:51rem;
+  display: flex;
+  justify-content: center;
+  align-items:center;
+  
+}
+.row{
+  justify-content: space-around;
+  align-items:center;
+  border-radius: 20px;
+  display: flex;
+  width: 71rem;
+  height: 41rem;
+  margin: auto;
+  background: rgba(139, 134, 134, 0.1);
+  backdrop-filter:blur(30px);
+  padding: 7%;
+}
+@media only screen  and (max-width:600px){
+  .row{
+    flex-direction: column;
+    height: 50rem;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+  }
+  .text-white{
+    display: flex;
+    margin-top: 2rem;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+
+  }
+}
+.text-white{
+  flex: 1;
+}
+.contact2{
+  height: inherit;
+  display: flex;
+  flex: 1;
+  justify-content: center;
+  flex-direction: column;
+}
+.hi{
+  color: #00f4ff;
+}
+.form1{
+  color: #00f4ff;
+  font-size: 2.5rem;
+}
+input[type=text] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #00f4ff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  border-radius:10px
+}
+
+input[type=text]:focus {
+  border: 3px solid #555;
+  border-radius:10px
+}
+input[type=email] {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #00f4ff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  border-radius:10px
+}
+
+input[type=email]:focus {
+  border: 3px solid #555;
+  border-radius:10px
+}
+.form-control{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #00f4ff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  border-radius:10px
+}
+
+form-control:focus {
+  border: 3px solid #555;
+  border-radius:10px
+}
+.btn{
+  width: 40%;
+  padding: 8px 5%;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 3px solid #ffffff;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  outline: none;
+  border-radius:10px;
+  background-color: #00f4ff;
+  font-weight: 800;
+}
+.btn:hover{
+  background-color: #ffffff;
+  border: 3px solid #00f4ff;
+  box-shadow: 0px 1px 20px #00f4ff;
+
+}
+
