--- a/style.css
+++ b/style.css
@@ -983,7 +983,7 @@ html {
   }
 }
 /*----------contact form --------8*/
-/* .container{
+.container{
   background-color: black;
   width: 100vw;
   height:51rem;
@@ -1106,4 +1106,4 @@ form-control:focus {
 
 }
 
- */
+
