--- a/style.css
+++ b/style.css
@@ -984,7 +984,7 @@ html {
 }
 /*----------contact form --------8*/
 .container{
-  background-color: black;
+  background-color: white;
   width: 100vw;
   height:51rem;
   display: flex;
@@ -1000,7 +1000,7 @@ html {
   width: 71rem;
   height: 41rem;
   margin: auto;
-  background: rgba(139, 134, 134, 0.1);
+  background: grey;
   backdrop-filter:blur(30px);
   padding: 7%;
 }
@@ -1032,10 +1032,10 @@ html {
   flex-direction: column;
 }
 .hi{
-  color: #00f4ff;
+  color:black;
 }
 .form1{
-  color: #00f4ff;
+  color: black;
   font-size: 2.5rem;
 }
 input[type=text] {
@@ -1043,7 +1043,7 @@ input[type=text] {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid #00f4ff;
+  border: 3px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
@@ -1051,7 +1051,7 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-  border: 3px solid #555;
+  border: 3px solid red;
   border-radius:10px
 }
 input[type=email] {
@@ -1059,7 +1059,7 @@ input[type=email] {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid #00f4ff;
+  border: 3px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
@@ -1067,7 +1067,7 @@ input[type=email] {
 }
 
 input[type=email]:focus {
-  border: 3px solid #555;
+  border: 3px solid red;
   border-radius:10px
 }
 .form-control{
@@ -1075,7 +1075,7 @@ input[type=email]:focus {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid #00f4ff;
+  border: 3px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
@@ -1083,7 +1083,7 @@ input[type=email]:focus {
 }
 
 form-control:focus {
-  border: 3px solid #555;
+  border: 3px solid red;
   border-radius:10px
 }
 .btn{
@@ -1091,18 +1091,18 @@ form-control:focus {
   padding: 8px 5%;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid #ffffff;
+  border: 3px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
   border-radius:10px;
-  background-color: #00f4ff;
+  background-color: blue;
   font-weight: 800;
 }
 .btn:hover{
-  background-color: #ffffff;
-  border: 3px solid #00f4ff;
-  box-shadow: 0px 1px 20px #00f4ff;
+  background-color: black;
+  border: 3px solid blue;
+  box-shadow: 0px 1px 20px blue;
 
 }
 
