--- a/style.css
+++ b/style.css
@@ -1000,7 +1000,7 @@ html {
   width: 71rem;
   height: 41rem;
   margin: auto;
-  background: grey;
+  background: #cac6c6;
   backdrop-filter:blur(30px);
   padding: 7%;
 }
@@ -1043,7 +1043,7 @@ input[type=text] {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid black;
+  border: 2px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
@@ -1051,7 +1051,7 @@ input[type=text] {
 }
 
 input[type=text]:focus {
-  border: 3px solid red;
+  border: 2px solid red;
   border-radius:10px
 }
 input[type=email] {
@@ -1059,7 +1059,7 @@ input[type=email] {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid black;
+  border: 2px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
@@ -1067,7 +1067,7 @@ input[type=email] {
 }
 
 input[type=email]:focus {
-  border: 3px solid red;
+  border: 2px solid red;
   border-radius:10px
 }
 .form-control{
@@ -1075,7 +1075,7 @@ input[type=email]:focus {
   padding: 12px 20px;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid black;
+  border: 2px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
@@ -1083,7 +1083,7 @@ input[type=email]:focus {
 }
 
 form-control:focus {
-  border: 3px solid red;
+  border: 2px solid red;
   border-radius:10px
 }
 .btn{
@@ -1091,17 +1091,18 @@ form-control:focus {
   padding: 8px 5%;
   margin: 8px 0;
   box-sizing: border-box;
-  border: 3px solid black;
+  border: 2px solid black;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   outline: none;
   border-radius:10px;
-  background-color: blue;
+  background-color: #c1d7f2;
   font-weight: 800;
 }
 .btn:hover{
   background-color: black;
-  border: 3px solid blue;
+  border: 2px solid #c1d7f2;
+  color:white;
   box-shadow: 0px 1px 20px blue;
 
 }
